feat: complete api for banners and tickets
